fix status text-alignment #621

--- a/src/protected/application/themes/BaseV1/assets/css/sass/components/_registrations-tables.scss
+++ b/src/protected/application/themes/BaseV1/assets/css/sass/components/_registrations-tables.scss
@@ -247,6 +247,7 @@
     border-radius: $border-radius-base;
     font-size: $font-size-smaller;
     line-height: 1.875rem;
+    text-align: center;
     color: #fff;
 }
 .status-sent {
